--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Bobcatten">
     <meta name="keywords" content="Index">
     <meta name="author" content="Bobcatten">
-    <title>Bobcatten1</title>
+    <title>Bobcatten</title>
     <!-- jQuery -->
     <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/jquery/3.5.1/jquery.min.js"></script>
     <!-- HarmonyOS Sans -->
